fix: revenue chart statistics admin